<resources>
    <string name="app_name">Final Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>\
    <string name="create_new_acc_message" translatable="false">Create New Account</string>
    <string name="userName" translatable="false">UserName</string>
    <string name="email" translatable="false">Email</string>
    <string name="pass" translatable="false">Password</string>
    <string name="phone" translatable="false">Phone Number</string>
    <string name="signUp_btn" translatable="false">Sign Up</string>
    <string name="have_acc_message" translatable="false">Already have account ?</string>
    <string name="dont_have_acc" translatable="false">Dont Have An account ?</string>
    <string name="Login_page" translatable="false">Have an exsisting account </string>
    <string name="Sign_in_btn" translatable="false">Sign In</string>
    <string name="title_activity_sign_up">SignUp</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>