<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.Login"
    android:orientation="vertical"
    android:gravity="center">

    <ProgressBar
        android:id="@+id/prog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>




    <LinearLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:gravity="center">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/guide"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1"
            />
        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"

            app:layout_constraintTop_toBottomOf="@id/guide"
            android:id="@+id/imageSignIn"
            android:src="@drawable/amit"


            />

        <EditText
            android:background="@drawable/background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imageSignIn"
            android:hint="@string/email"
            android:drawableStart="@drawable/ic_user"
            android:padding="@dimen/_10sdp"
            android:drawablePadding="@dimen/_12sdp"
            android:layout_margin="@dimen/_12sdp"
            android:id="@+id/Username"
            android:textColorHint="@color/grey"
            android:drawableLeft="@drawable/ic_user" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">
            <EditText
                android:background="@drawable/background"
                android:padding="@dimen/_10sdp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/Username"
                android:hint="@string/pass"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="@dimen/_12sdp"
                android:layout_margin="@dimen/_12sdp"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:textColorHint="@color/grey"
                android:drawableLeft="@drawable/ic_lock" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:background="@drawable/background_btn"
            android:id="@+id/button_SignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/Sign_in_btn"
            android:textSize="@dimen/_21sdp"
            android:layout_marginVertical="@dimen/_27sdp"
            app:layout_constraintEnd_toEndOf="parent"></Button>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/button_SignIn"
            android:id="@+id/dont"
            android:text="@string/dont_have_acc"
            android:textSize="@dimen/_22sdp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_27sdp"
            />

    </LinearLayout>

</FrameLayout>